--- a/Dia9/style.css
+++ b/Dia9/style.css
@@ -44,8 +44,36 @@ body{
 #pokemondiv{
     display: flex;
     padding-top: 40px;
+    padding-bottom: 55px;
     width: 255px;
     height: 170px;
     align-items: center;
     justify-content: center;
+}
+
+#data{
+    font-size: 25px;
+    font-weight: 600;
+    margin: 10px;
+    position: absolute;
+    right: 100px;
+    top: 340px;
+}
+
+#posNum{
+    color: #aaa;
+}
+
+#name{
+    color: #3a444d;
+}
+
+input{
+    width: 295px;
+    padding: 4%;
+    border: 2px solid #333;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: 600;
+    box-shadow: -3px 4px 0 #888, -5px 7px 0 #333;
 }
