--- a/Dia11/styles/style.css
+++ b/Dia11/styles/style.css
@@ -239,7 +239,7 @@ button {
 }
 
 .btnPlay {
-    color: #0bf4f3;
+    color: #2600ff;
     border: none;
     display: flex;
     justify-content: center;
@@ -254,15 +254,15 @@ button {
     align-items: center;
     aspect-ratio: 2/1;
     position: absolute;
-    border: 1px solid #0bf4f3;
-    box-shadow: 0 0 5px #0bf4f3, 0 0 5px #0bf4f3 inset;
+    border: 1px solid #2600ff;
+    box-shadow: 0 0 5px #2600ff, 0 0 5px #2600ff inset;
     transition: all 0.3s;
     font-family: "PressStart2P", sans-serif;
     font-size: min(2rem, 8vw);
 }
 
 .btnPlay span:nth-child(1) {
-    box-shadow: 0 0 5px #0bf4f3, 0 0 5px #0bf4f3 inset;
+    box-shadow: 0 0 5px #2600ff, 0 0 5px #2600ff inset;
     transform: rotateX(90deg);
     transform-origin: 50% 50% -50px;
 }
@@ -277,14 +277,14 @@ button {
 }
 
 .btnPlay:hover span:nth-child(2) {
-    box-shadow: 0 0 5px #0bf4f3, 0 0 5px #0bf4f3 inset;
+    box-shadow: 0 0 5px #2600ff, 0 0 5px #2600ff inset;
     transform: rotateX(-90deg);
 }
 
 .btnRules {
-    color: #0bf4f3;
-    box-shadow: 0 0 5px #0bf4f3, 0 0 5px #0bf4f3 inset;
-    border: 1px solid #0bf4f3;
+    color: #2600ff;
+    box-shadow: 0 0 5px #2600ff, 0 0 5px #2600ff inset;
+    border: 1px solid #2600ff;
     font-family: "PressStart2P", sans-serif;
     font-size: min(2rem, 8vw);
 }
@@ -297,7 +297,7 @@ button {
     bottom: 0;
     left: 0;
     z-index: -1;
-    box-shadow: 0 0 5px #0bf4f3, 0 0 5px #0bf4f3 inset;
+    box-shadow: 0 0 5px #2600ff, 0 0 5px #2600ff inset;
     transition: all 0.3s ease;
 }
 
@@ -538,6 +538,20 @@ button {
     white-space: pre-wrap;
 }
 
+.containAlert {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, .3);
+    position: absolute;
+    z-index: 10;
+    visibility: hidden;
+    transform: translateX(100%);
+    transition: transform .2s linear;
+}
+
 .alert {
     width: 80vw;
     height: 80vh;
@@ -547,13 +561,10 @@ button {
     align-items: center;
     background: transparent;
     position: absolute;
-    border: 2px solid #0bf4f3;
+    border: 2px solid #2600ff;
     border-radius: 20px;
-    box-shadow: 0 0 10px #0bf4f3, 0 0 10px #0bf4f3 inset;
-    z-index: 10;
-    visibility: hidden;
-    transform: translateX(100%);
-    transition: transform .2s linear;
+    box-shadow: 0 0 10px #2600ff, 0 0 10px #2600ff inset;
+    z-index: 11;
 }
 
 .alert button span img {
