--- a/Dia11/styles/style.css
+++ b/Dia11/styles/style.css
@@ -396,16 +396,30 @@ button {
     min-height: 34vh;
 }
 
-#playerHand::after {
-    content: "";
+#dealerHand::before {
+    content: "Crupier hand:";
+    font-family: "Audiowide", sans-serif;
+    font-size: 2rem;
     width: 100%;
-    height: 20px;
-    border-bottom: 10px solid rgba(121, 121, 121, 0.5);
+    color: rgba(121, 121, 121, 0.5);
+    text-align: center;
+}
+
+#playerHand::before {
+    content: "Your hand:";
+    font-family: "Audiowide", sans-serif;
+    font-size: 2rem;
+    width: 100%;
+    color: rgba(121, 121, 121, 0.5);
+    text-align: center;
 }
 
 .actions {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column-reverse;
+    flex-wrap: wrap;
     position: absolute;
     right: 5px;
     gap: 5px;
